# wirestead-examples

./: .clang-format  .cmake-format.py  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cmake.yml  code-formatting.yml
cmake/: FetchUnilink.cmake  FetchWirestead.cmake
docs/tasks/: improve-unilink-package-export.md
examples/: CMakeLists.txt  README.md
examples/serial/: CMakeLists.txt  README.md
examples/serial/async/: echo.cc
examples/serial/sync/: echo.cc
examples/tcp/: CMakeLists.txt  README.md
examples/tcp/async/: echo_client.cc  echo_server.cc
examples/tcp/sync/: broadcast_server.cc  echo_client.cc  echo_server.cc
examples/udp/: CMakeLists.txt  README.md
examples/udp/async/: receiver.cc  sender.cc
examples/udp/sync/: receiver.cc  sender.cc
examples/uds/: CMakeLists.txt  README.md
examples/uds/async/: echo_client.cc  echo_server.cc
examples/uds/sync/: echo_client.cc  echo_server.cc
scripts/: README.md  verify.sh
