# Copyright 2025 Jinwoo Sung
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

add_executable(sync_udp_receiver sync/receiver.cc)
target_link_libraries(sync_udp_receiver PRIVATE unilink::unilink)
unilink_configure_executable(sync_udp_receiver)

add_executable(sync_udp_sender sync/sender.cc)
target_link_libraries(sync_udp_sender PRIVATE unilink::unilink)
unilink_configure_executable(sync_udp_sender)

# Async Examples
add_executable(async_udp_receiver async/receiver.cc)
target_link_libraries(async_udp_receiver PRIVATE unilink::unilink)
unilink_configure_executable(async_udp_receiver)

add_executable(async_udp_sender async/sender.cc)
target_link_libraries(async_udp_sender PRIVATE unilink::unilink)
unilink_configure_executable(async_udp_sender)
